--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <h1>BENOLT MUTSAGO</h1>
                
 
-                <a href="BENOLT MUTSAGO CV INTERN.pdf" download = "DEV BENOLT RESUME" class="download-button">Download PDF</a>
+                <marquee><a href="BENOLT MUTSAGO CV INTERN.pdf" download = "DEV BENOLT RESUME" class="download-button">Download PDF</a></marquee>
 <br>
 <br>
 
