--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="box-2">
                 <h2>ABOUT ME <i class="material-icons icons3" style="font-size: 28px!important; ">perm_identity</i></h2>
                 <p class="p2">
-                    I'm Benolt Mutsago, an alumna of Harare Institute, currently pursuing a Bachelor of Technology Honours degree in Computer Science. Throughout my academic journey, I have acquired a diverse skill set in management and technology.Apart from being a dedicated student, I am a collaborative team player who thrives in dynamic environments. I possess excellent communication skills and find joy in engaging with fellow students, professors, and industry professionals to exchange ideas and explore new possibilities. Driven by a growth mindset, I constantly seek opportunities to expand my knowledge and skills in emerging technologies, such as artificial intelligence, cloud computing, and cybersecurity.                 </p>
+                    I'm Benolt Mutsago, currently pursuing a Bachelor of Technology Honours degree in Computer Science at Harare Institute of Technology. Throughout my academic journey, I have acquired a diverse skill set in management and technology.Apart from being a dedicated student, I am a collaborative team player who thrives in dynamic environments. I possess excellent communication skills and find joy in engaging with fellow students, professors, and industry professionals to exchange ideas and explore new possibilities. Driven by a growth mindset, I constantly seek opportunities to expand my knowledge and skills in emerging technologies, such as artificial intelligence, cloud computing, and cybersecurity.                 </p>
             </div>
     
     
